=================
Changes for crash
=================

Unreleased
==========

2016/10/12 0.18.1
=================

 - Fix: crashed in verbose mode if crate didn't provide an error trace

2016/09/23 0.18.0
=================

 - Don't show tables from ``pg_catalog`` if ``\dt`` command is used.

 - Make the ``\check`` command to display both, node and cluster checks.
   Allow ``node`` and ``cluster`` arguments for the command to display
   node and cluster checks, respectively.

2016/09/23 0.17.2
=================

 - Update autocompletion to reflect newest crate features

 - Require Pygments version greater or equal 2.0


2016/06/28 0.17.1
=================

 - Fix: crash_standalone could crash because it contained non-ascii character
   but no encoding was declared

2016/06/23 0.17.0
=================

 - Added support for OPTIMIZE table statement.

 - All statements will respond with an affected rows count now.

 - Added a configuration file that stores default values for Crash. The file is
   placed inside the user's application config folder.
   A path to a custom configuration file can be specified using the ``--config``
   command line argument.

 - Dropped Python 2.6 support

 - Added support for client certificates

 - It is now possible to disable autocompletion using ``--no-autocomplete``
   command line argument and to toggle autocomplete using the ``\autocomplete``
   crash command.

2016/06/23 0.16.1
=================

 - Fixed "read file" command (``\r``) for legacy Python 2.7

 - Fixed result info command output for whitespace other than space
   characters in queries.

 - Fixed call of `sysinfo` command when launching the shell.

2016/02/15 0.16.0
=================

 - The order of the keys / columns of the ``json`` output format is now
   deterministic and reflects the order of the columns in the executed query.

 - `Ctrl-c` no longer results in a KeyboardInterrupt exception if invoked while
   a query is being executed.
