@@ -5,6 +5,9 @@ Changes for crash
 Unreleased
 ==========
 
+ - Allow "short hosts" as Crate hosts argument,
+   such as ``:4200`` for ``localhost:4200``
+
 2016/10/12 0.18.1
 =================
 
